Closed Bug 589755 Opened 14 years ago Closed 14 years ago

[D3D9] Canvas layer uses incorrect source with d2d surfaces

Categories

(Core :: Graphics, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- beta5+

People

(Reporter: mattwoodrow, Assigned: mattwoodrow)

References

Details

Attachments

(1 file, 1 obsolete file)

No description provided.
Attached patch Fixed! (obsolete) — Splinter Review
Attachment #468277 - Flags: review?(bas.schouten)
Blocks: 586459
Attachment #468277 - Attachment is obsolete: true
Attachment #468520 - Flags: review?(bas.schouten)
Attachment #468277 - Flags: review?(bas.schouten)
Comment on attachment 468520 [details] [diff] [review] Image layers also have the same issue Bit of a weird name for the patch. But certainly a correct change.
Attachment #468520 - Flags: review?(bas.schouten)
Attachment #468520 - Flags: review+
Attachment #468520 - Flags: approval2.0?
Comment on attachment 468520 [details] [diff] [review] Image layers also have the same issue No need for approval; blocks a blocker.
Attachment #468520 - Flags: approval2.0?
(In reply to comment #4) > Comment on attachment 468520 [details] [diff] [review] > Image layers also have the same issue > > No need for approval; blocks a blocker. Did this change? I remember only a couple of weeks ago I was explicitly told this is not enough.
Assignee: nobody → matt.woodrow+bugzilla
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
(In reply to comment #5) > Did this change? I remember only a couple of weeks ago I was explicitly told > this is not enough. I was told it was, and it's been convention in the past. Sounds like your source and my source need to have a cagefight!
Cagefighting all the way down! (IMO it doesn't matter if it's explicitly marked as blocking. We're all friends, bureaucracy just gets in the way.)
blocking2.0: --- → beta5+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: