Bug 589755 - [D3D9] Canvas layer uses incorrect source with d2d surfaces. r=bas, a=beta5+